Fix overflow

--- a/src/styles/MovingFooter.modules.css
+++ b/src/styles/MovingFooter.modules.css
@@ -2,7 +2,7 @@
   /* padding: 8rem 6rem; */
 margin: 4em;
   color: white;
-  overflow: visible;
+  overflow: hidden;
 }
 
 /* MARQUEE */
